Fix alignments for mobile styling

--- a/src/styles/components/_about.scss
+++ b/src/styles/components/_about.scss
@@ -6,7 +6,11 @@
     
     .about-container {
         max-width: 800px;
-        margin: 3rem auto;
+        margin: 2.5rem auto;
+
+        h2 {
+            text-align: center;
+        }
     }
 
     a {
